aks/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: web
  labels:
    deploy: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: "ikaiops.azurecr.io/nginx:latest"
        imagePullPolicy: Always
        name: nginx
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
      imagePullSecrets:
      - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: web
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      name: nginx-http
      port: 80
      targetPort: 80
