aks/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nginx-ingress
  namespace: web
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: fruits
          servicePort: 8080
        path: /
